--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Pomodoro
+    %title Tomato
     = stylesheet_link_tag "application", :media => "all"
     = csrf_meta_tags
     %style{:type => "text/css"}
