View active and finish

--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -6,25 +6,25 @@
     = f.text_field :name
     = f.select :plan, (1..9).map{|i| ["#{i} #{'pomodoro'.pluralize(i)}", i]}, {}, :class => :span2
     = f.submit "submit", :class => :btn
+
+%h1 ACTIVE
 %table.table.table-striped
   %thead
     %tr
-      %th.span1 #
+      %th.span1 finish
       %th delete
       %th task
       %th plan
       %th now
       %th add
+      %th create_at
   %tbody
-    - @tasks.each do |task|
+    - @tasks.active.each do |task|
       %tr
         %td.span1
-          - unless task.finish?
-            = link_to finish_task_path(task), :method => :post, :class => %w(btn btn-mini btn-success) do
-              %i.icon-white.icon-ok
-          - else
-            %a.btn.btn-mini.btn-success
-              %i.icon-white.icon-check
+          = link_to finish_task_path(task), :method => :post, :class => %w(btn btn-mini btn-success) do
+            %i.icon-white.icon-ok
+
         %td.span1
           = link_to task_path(task), :method => :delete, :class => %w(btn btn-mini btn-danger) do
             %i.icon-white.icon-trash
@@ -38,3 +38,29 @@
                     :method => :post,
                     :class => %w(btn btn-mini btn-primary) do
             %i.icon-white.icon-plus-sign
+        %td= task.created_at
+%h1 FINISHED
+%table.table.table-striped
+  %thead
+    %tr
+      %th.span1 #
+      %th delete
+      %th task
+      %th plan
+      %th now
+      %th finished at
+  %tbody
+    - @tasks.finished.each do |task|
+      %tr
+        %td.span1
+          %span.btn.btn-mini.btn-success
+            %i.icon-white.icon-check
+        %td.span1
+          = link_to task_path(task), :method => :delete, :class => %w(btn btn-mini btn-danger) do
+            %i.icon-white.icon-trash
+        %td
+          %i.icon-tag
+          = task.name
+        %td= "#{task.plan} #{'pomodoro'.pluralize(task.plan)}"
+        %td= "#{'○' * task.pomodoros.size}"
+        %td= task.finished_at
